Horizontal scrollbar in chat window fix

--- a/stylus/framework/chat-content.styl
+++ b/stylus/framework/chat-content.styl
@@ -120,7 +120,7 @@
 
 .message-group
 	@extend $clearfix
-	margin: 10px 30px 20px 20px
+	margin: 10px 37px 20px 20px
 	position: relative
 	.avatar
 		float: left
